# airbag

./: .gitignore  README.md
include/airbag/: minidump.hpp  process_error.hpp  stop_request.hpp  system_failure.hpp  thread_error.hpp
test/: CMakeLists.txt  test.cpp
